--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 
   <style>
     :root{
-      /* Palette douce et calme (pas de noir) */
-      --bg-1:#f6f9fc;   /* bleu très pâle */
-      --bg-2:#eef7f6;   /* vert d'eau très léger */
-      --card:#ffffff;   /* blanc propre */
-      --text:#335566;   /* bleu-gris doux, bonne lisibilité */
-      --muted:#6f8791;  /* texte secondaire */
-      --primary:#5aa3a6;/* sarcelle tendre */
-      --primary-strong:#428c8f; /* pour hover */
-      --accent:#c9d7ff; /* lavande très légère */
-      --ring:#a7d9db;   /* contour focus */
+      --bg-1:#f6f9fc;
+      --bg-2:#eef7f6;
+      --card:#ffffff;
+      --text:#335566;
+      --muted:#6f8791;
+      --primary:#5aa3a6;
+      --primary-strong:#428c8f;
+      --accent:#c9d7ff;
+      --ring:#a7d9db;
       --shadow: 0 8px 24px rgba(82,126,133,.12);
     }
     html,body{height:100%}
@@ -62,6 +61,16 @@
     .btn:disabled{opacity:.65;cursor:not-allowed;transform:none}
     .ghost{background:transparent;color:var(--primary);border:1.5px solid var(--primary);}
 
+    .lang-select{
+      border-radius:999px;
+      border:1px solid rgba(90,163,166,.3);
+      padding:8px 10px;
+      font-size:13px;
+      background:#f7fbfb;
+      color:var(--muted);
+      outline:none;
+    }
+
     .result{margin-top:16px}
     .bubble{background:linear-gradient(180deg,#ffffff, #f7fbfb);border-radius:16px;padding:16px 16px;box-shadow:var(--shadow);line-height:1.7}
     .bubble .section{margin:10px 0}
@@ -75,7 +84,6 @@
     .footer{margin-top:28px;font-size:12.5px;color:var(--muted);text-align:center}
     .small{font-size:13px;color:var(--muted)}
 
-    /* 🌈 Halo et ambiance adaptative */
     .halo { position: fixed; inset: 0; z-index: -1; pointer-events: none; overflow: hidden; }
     .halo::before {
       content: ""; position: absolute; width: 120vmax; height: 120vmax;
@@ -87,7 +95,6 @@
       0%,100% { transform: translate(-50%, -50%) scale(1); opacity: 0.35; }
       50% { transform: translate(-50%, -50%) scale(1.15); opacity: 0.55; }
     }
-    /* 🎭 Couleurs par thème */
     .theme-stress::before { background: radial-gradient(circle, #a8d8ff, #80b5d6); }
     .theme-peur::before { background: radial-gradient(circle, #ffe2b0, #f7c87b); }
     .theme-culpabilite::before { background: radial-gradient(circle, #dcbcff, #b89adb); }
@@ -97,7 +104,6 @@
     .theme-inspiration::before { background: radial-gradient(circle, #ffd2e6, #f8a8c6); }
     .theme-neutre::before { background: radial-gradient(circle, #dff7d9, #b8e5b0); }
 
-    /* 🌸 Petit visuel flottant (icône) */
     .visual {
       position: absolute; width: 120px; height: 120px;
       top: 30%; left: 50%; transform: translateX(-50%);
@@ -107,7 +113,6 @@
   </style>
 </head>
 <body>
-  <!-- Ambiance visuelle -->
   <div class="halo"></div>
   <img id="visual" class="visual" alt="" src="" style="display:none;">
 
@@ -123,7 +128,6 @@
     </header>
 
     <div class="grid">
-      <!-- Colonne gauche : Saisie & Résultats -->
       <section class="card">
         <h2>Étape 1</h2>
         <p class="help">Décrivez votre dilemme en une phrase. L’oracle vous renverra une lecture énergétique, une prise de conscience, un rituel, puis une parole de guidance.</p>
@@ -132,13 +136,19 @@
         <div class="actions">
           <button id="analyzeBtn" class="btn">Analyser</button>
           <button id="clearBtn" class="btn ghost" type="button">Effacer</button>
+          <select id="langSelect" class="lang-select">
+            <option value="">Langue : auto</option>
+            <option value="fr">Français</option>
+            <option value="en">English</option>
+            <option value="es">Español</option>
+            <option value="ar">العربية</option>
+          </select>
           <span id="status" class="small" aria-live="polite"></span>
         </div>
 
         <div id="result" class="result"></div>
       </section>
 
-      <!-- Colonne droite : Rituels & Bien-être -->
       <aside class="card rituals">
         <h2>Rituels de clarté</h2>
         <span class="chip">Respiration 4–6–8 : inspirer 4 · retenir 6 · expirer 8</span>
@@ -152,7 +162,7 @@
       </aside>
     </div>
 
-    <div class="footer">©️ SoulsetJourney • Interface claire et apaisée • V5</div>
+    <div class="footer">©️ SoulsetJourney • Interface claire et apaisée • V6</div>
   </div>
 
   <script>
@@ -164,8 +174,8 @@
     const statusEl = qs('#status');
     const halo = qs('.halo');
     const visual = qs('#visual');
+    const langSelect = qs('#langSelect');
 
-    // Icônes symboliques (remplace par tes PNG/SVG si tu veux)
     const visuals = {
       stress: "https://cdn-icons-png.flaticon.com/512/4140/4140048.png",
       peur: "https://cdn-icons-png.flaticon.com/512/3075/3075977.png",
@@ -178,7 +188,7 @@
     };
 
     function setTheme(theme) {
-      halo.className = "halo";           // reset classes
+      halo.className = "halo";
       halo.classList.add(`theme-${theme}`);
       visual.style.display = "none";
       if (visuals[theme]) {
@@ -200,7 +210,7 @@
       const text = (inputEl.value || '').trim();
       if (!text) { inputEl.focus(); return; }
 
-      btn.disabled = true; clearBtn.disabled = true;
+      btn.disabled = true; clearBtn.disabled = true; langSelect.disabled = true;
       statusEl.textContent = 'Lecture en cours…';
       renderMessage('⏳ Je t’écoute, souffle calme…');
       setTheme('neutre');
@@ -209,7 +219,7 @@
         const res = await fetch('/api/analyze', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ text })
+          body: JSON.stringify({ text, lang: langSelect.value })
         });
         const data = await res.json().catch(() => ({}));
 
@@ -219,7 +229,7 @@
         if (res.ok && data?.ok && output) {
           renderMessage(output);
           setTheme(theme);
-          statusEl.textContent = `Thème : ${theme}`;
+          statusEl.textContent = `Thème : ${theme} • Langue : ${data.lang || 'auto'}`;
         } else {
           renderMessage('✨ Je n’ai pas pu générer l’analyse. Réessaie avec une phrase simple.');
           setTheme('neutre');
@@ -232,7 +242,7 @@
         statusEl.textContent = 'Hors-ligne ?';
         console.error(e);
       } finally {
-        btn.disabled = false; clearBtn.disabled = false;
+        btn.disabled = false; clearBtn.disabled = false; langSelect.disabled = false;
       }
     }
 
