--- a/soulset-navigator-v5.1-connected-responses/index.html
+++ b/soulset-navigator-v5.1-connected-responses/index.html
@@ -30,7 +30,7 @@
                   radial-gradient(900px 700px at 100% 0%, var(--accent), transparent 55%),
                   linear-gradient(180deg, var(--bg-1), #ffffff);
     }
-    .container{max-width:1100px;margin:0 auto;padding:32px 20px}
+    .container{max-width:1100px;margin:0 auto;padding:32px 20px;  position:relative; z-index:1}
     header{display:flex;gap:16px;align-items:center;justify-content:space-between;margin-bottom:16px}
     .brand{display:flex;align-items:center;gap:14px}
     .logo{width:42px;height:42px;border-radius:12px;background:linear-gradient(135deg,#d9f2f1,#bfe6ff);box-shadow:var(--shadow);display:grid;place-items:center}
@@ -91,25 +91,39 @@
     .small{font-size:13px;color:var(--muted)}
 
     /* Halo background */
-    .halo { position: fixed; inset: 0; z-index: -1; pointer-events: none; overflow: hidden; }
-    .halo::before {
-      content: ""; position: absolute; width: 120vmax; height: 120vmax;
-      top: 50%; left: 50%; transform: translate(-50%, -50%);
-      border-radius: 50%; filter: blur(120px); opacity: 0.45;
-      animation: breathe 10s ease-in-out infinite;
-    }
-    @keyframes breathe {
-      0%,100% { transform: translate(-50%, -50%) scale(1); opacity: 0.35; }
-      50% { transform: translate(-50%, -50%) scale(1.15); opacity: 0.55; }
-    }
-    .theme-stress::before { background: radial-gradient(circle, #a8d8ff, #80b5d6); }
-    .theme-fear::before { background: radial-gradient(circle, #ffe2b0, #f7c87b); }
-    .theme-guilt::before { background: radial-gradient(circle, #dcbcff, #b89adb); }
-    .theme-uncertainty::before { background: radial-gradient(circle, #fff4b3, #ffe480); }
-    .theme-anger::before { background: radial-gradient(circle, #ffb3b3, #ff8686); }
-    .theme-sadness::before { background: radial-gradient(circle, #c9e4ff, #a4c6e5); }
-    .theme-inspiration::before { background: radial-gradient(circle, #ffd2e6, #f8a8c6); }
-    .theme-neutral::before { background: radial-gradient(circle, #dff7d9, #b8e5b0); }
+.halo {
+  position: fixed;
+  inset: 0;
+  z-index: 0;           /* au lieu de -1 */
+  pointer-events: none;
+  overflow: hidden;
+}
+.halo::before {
+  content: "";
+  position: absolute;
+  width: 120vmax;
+  height: 120vmax;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  filter: blur(90px);   /* un peu moins flou = plus visible */
+  opacity: 0.6;         /* plus opaque */
+  animation: breathe 10s ease-in-out infinite;
+}
+@keyframes breathe {
+  0%,100% { transform: translate(-50%, -50%) scale(1); opacity: 0.45; }
+  50% { transform: translate(-50%, -50%) scale(1.15); opacity: 0.7; }
+}
+.theme-stress::before { background: radial-gradient(circle, #a8d8ff, #80b5d6); }
+.theme-fear::before { background: radial-gradient(circle, #ffe2b0, #f7c87b); }
+.theme-guilt::before { background: radial-gradient(circle, #dcbcff, #b89adb); }
+.theme-uncertainty::before { background: radial-gradient(circle, #fff4b3, #ffe480); }
+.theme-anger::before { background: radial-gradient(circle, #ffb3b3, #ff8686); }
+.theme-sadness::before { background: radial-gradient(circle, #c9e4ff, #a4c6e5); }
+.theme-inspiration::before { background: radial-gradient(circle, #ffd2e6, #f8a8c6); }
+.theme-neutral::before { background: radial-gradient(circle, #dff7d9, #b8e5b0); }
+
   </style>
 </head>
 <body>
