--- a/index.html
+++ b/index.html
@@ -33,8 +33,16 @@
     .container{max-width:1100px;margin:0 auto;padding:32px 20px;  position:relative; z-index:1}
     header{display:flex;gap:16px;align-items:center;justify-content:space-between;margin-bottom:16px}
     .brand{display:flex;align-items:center;gap:14px}
-    .logo{width:42px;height:42px;border-radius:12px;background:linear-gradient(135deg,#d9f2f1,#bfe6ff);box-shadow:var(--shadow);display:grid;place-items:center}
-    .logo span{font-family:"Playfair Display", serif;color:var(--primary);font-size:22px}
+
+    /* Nouveau style pour ton logo */
+    .brand-logo{
+      width:72px;
+      height:72px;
+      border-radius:50%;
+      box-shadow:0 0 24px rgba(90,163,166,.45);
+      object-fit:cover;
+    }
+
     h1{font-family:"Playfair Display", serif;font-weight:700;letter-spacing:.2px;margin:0;font-size:clamp(22px,2.7vw,30px)}
     .subtitle{color:var(--muted);font-size:14px}
 
@@ -91,39 +99,38 @@
     .small{font-size:13px;color:var(--muted)}
 
     /* Halo background */
-.halo {
-  position: fixed;
-  inset: 0;
-  z-index: 0;           /* au lieu de -1 */
-  pointer-events: none;
-  overflow: hidden;
-}
-.halo::before {
-  content: "";
-  position: absolute;
-  width: 120vmax;
-  height: 120vmax;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  filter: blur(90px);   /* un peu moins flou = plus visible */
-  opacity: 0.6;         /* plus opaque */
-  animation: breathe 10s ease-in-out infinite;
-}
-@keyframes breathe {
-  0%,100% { transform: translate(-50%, -50%) scale(1); opacity: 0.45; }
-  50% { transform: translate(-50%, -50%) scale(1.15); opacity: 0.7; }
-}
-.theme-stress::before { background: radial-gradient(circle, #a8d8ff, #80b5d6); }
-.theme-fear::before { background: radial-gradient(circle, #ffe2b0, #f7c87b); }
-.theme-guilt::before { background: radial-gradient(circle, #dcbcff, #b89adb); }
-.theme-uncertainty::before { background: radial-gradient(circle, #fff4b3, #ffe480); }
-.theme-anger::before { background: radial-gradient(circle, #ffb3b3, #ff8686); }
-.theme-sadness::before { background: radial-gradient(circle, #c9e4ff, #a4c6e5); }
-.theme-inspiration::before { background: radial-gradient(circle, #ffd2e6, #f8a8c6); }
-.theme-neutral::before { background: radial-gradient(circle, #dff7d9, #b8e5b0); }
-
+    .halo {
+      position: fixed;
+      inset: 0;
+      z-index: 0;
+      pointer-events: none;
+      overflow: hidden;
+    }
+    .halo::before {
+      content: "";
+      position: absolute;
+      width: 120vmax;
+      height: 120vmax;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      filter: blur(90px);
+      opacity: 0.6;
+      animation: breathe 10s ease-in-out infinite;
+    }
+    @keyframes breathe {
+      0%,100% { transform: translate(-50%, -50%) scale(1); opacity: 0.45; }
+      50% { transform: translate(-50%, -50%) scale(1.15); opacity: 0.7; }
+    }
+    .theme-stress::before { background: radial-gradient(circle, #a8d8ff, #80b5d6); }
+    .theme-fear::before { background: radial-gradient(circle, #ffe2b0, #f7c87b); }
+    .theme-guilt::before { background: radial-gradient(circle, #dcbcff, #b89adb); }
+    .theme-uncertainty::before { background: radial-gradient(circle, #fff4b3, #ffe480); }
+    .theme-anger::before { background: radial-gradient(circle, #ffb3b3, #ff8686); }
+    .theme-sadness::before { background: radial-gradient(circle, #c9e4ff, #a4c6e5); }
+    .theme-inspiration::before { background: radial-gradient(circle, #ffd2e6, #f8a8c6); }
+    .theme-neutral::before { background: radial-gradient(circle, #dff7d9, #b8e5b0); }
   </style>
 </head>
 <body>
@@ -132,7 +139,12 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo" aria-hidden="true"><span>★</span></div>
+        <!-- Logo Soulset Navigator -->
+        <img
+          src="soulset-icon-512.png"
+          alt="Soulset Navigator logo"
+          class="brand-logo"
+        />
         <div>
           <h1>The Soulset Navigator</h1>
           <div class="subtitle">Poetic AI guidance for aligned decisions</div>
