--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
     /* Nouveau style pour ton logo */
     .brand-logo{
-      width:72px;
-      height:72px;
-      border-radius:50%;
-      box-shadow:0 0 24px rgba(90,163,166,.45);
-      object-fit:cover;
-    }
+  width: 84px;
+  height: 84px;
+  border-radius: 50%;
+  padding: 6px;
+  background: #ffffffcc;
+  box-shadow: 0 0 22px rgba(90,163,166,.25);
+  object-fit: contain;      /* au lieu de cover */
+}
+
 
     h1{font-family:"Playfair Display", serif;font-weight:700;letter-spacing:.2px;margin:0;font-size:clamp(22px,2.7vw,30px)}
     .subtitle{color:var(--muted);font-size:14px}
